--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -65,6 +65,7 @@ jobs:
           context: .
           file: "./dotnet-multiplatform-docker/Dockerfile"
           push: ${{ github.event_name != 'pull_request' }}
+          platforms: windows/amd64,linux/arm64,linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
